<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_one"
            android:icon="@drawable/ic_archive"
            android:title="@string/coordinatorLayout" />
        <item
            android:id="@+id/navigation_two"
            android:icon="@drawable/ic_send"
            android:title="@string/animationsLayout" />
        <item
            android:id="@+id/navigation_three"
            android:icon="@drawable/ic_earth"
            android:title="@string/TapAnimationsLayout" />
        <item
            android:id="@+id/navigation_four"
            android:icon="@drawable/ic_mars"
            android:title="@string/ObjectAnimatorLayout" />
        <item
            android:id="@+id/navigation_five"
            android:icon="@drawable/ic_system"
            android:title="@string/RecyclerView" />
    </group>
</menu>