<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amazingapp.ui.picture.PictureOfTheDayFragment">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        app:layoutDescription="@xml/motion_scene">

        <ImageView
            android:id="@+id/btnWiki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="14dp"
            android:src="@drawable/ic_wikipedia"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/input_layout" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/inputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/dayBeforeYesterday"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DayBeforeYesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/yesterday"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Yesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/today"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Today" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_wiki"
            android:visibility="visible"
            app:counterEnabled="true"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_wikipedia"
            app:endIconMode="custom"
            app:helperText="@string/wiki_helper_text"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.amazingapp.util.CustomImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/picture_of_the_day_stub"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_no_photo_vector" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <include
        android:id="@+id/includeBottomSheet"
        layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/bottom_app_bar_background"
        app:fabAlignmentMode="center"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fab_background"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab"
        app:tint="#FFFFFF" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>