<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181818">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mars_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#d3d3d3"
        android:paddingStart="@dimen/date_padding_start_and_end"
        android:paddingTop="@dimen/date_padding_top_and_bottom"
        android:paddingEnd="@dimen/date_padding_start_and_end"
        android:paddingBottom="@dimen/date_padding_top_and_bottom"
        android:text="@string/date"
        android:textSize="@dimen/date_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintRight_toRightOf="@+id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_marginTop"
        android:background="#B71C1C"
        android:paddingStart="@dimen/title_padding_start_and_end"
        android:paddingTop="@dimen/title_padding_top_and_bottom"
        android:paddingEnd="@dimen/title_padding_start_and_end"
        android:paddingBottom="@dimen/title_padding_top_and_bottom"
        android:text="@string/title"
        android:textColor="#FFFF"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintRight_toLeftOf="@+id/backgroundImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tap_margin_start_and_end"
        android:layout_marginEnd="@dimen/tap_margin_start_and_end"
        android:layout_marginBottom="@dimen/tap_margin_bottom"
        android:text="@string/tap_show_description"
        android:textColor="#ffffff"
        android:textSize="@dimen/tap_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#181818"
        android:gravity="center"
        android:paddingStart="@dimen/description_padding_all"
        android:paddingEnd="@dimen/description_padding_all"
        android:paddingBottom="@dimen/description_padding_all"
        android:text="@string/description"
        android:textColor="#FFFF"
        android:textSize="@dimen/description_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage" />
</androidx.constraintlayout.widget.ConstraintLayout>